--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  
+}
+body {
+  background-color: lightgrey;
 }
 
 .App-logo {
@@ -13,16 +17,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
@@ -35,4 +30,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Adjust the spacing as needed */
 }
